# image-recognition-

./: .gitignore  README.md  app.py  load_net.py  main.py  mobilenet_v2.py  pyproject.toml  test_effnet.py  utils.py
app/: main.py
models/: mobilenet_v2.py
tests/: test_effnet.py  test_models.py
