[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "image-recognition"
version = "0.1.0"
description = "My Experiments with Vison models"
authors = [
    { name="Shyam Sunder" }
]
dependencies = [
    "torch",
    "torchvision"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["models*", "utils*"]
